2008-04-22  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/settings.cc (red_pill_check_always): Set to false as
	default.

	* src/confutils.cc, src/confutils.h (notifier_equal): Removed.
	* src/hildon-application-manager-config.cc (handle_generic_element):
	Make element_description a parameter.
	(handle_alist_element): New.
	(handle_element): Use it for the notifier elements.
	(main): Append the whole notifier configuration as one element.
	(prepend): Removed, configuration lists are unsorted.

	* src/update-notifier.c (struct _UpdateNotifierPrivate): Added
	inotify_io_watch_id and child_watch_id.
	(setup_inotify): Remember source id for the inotify channel watch.
	(check_for_updates): Remember source id for the child watch.
	(check_for_updates_done): Reset it.
	(update_notifier_finalize, clenaup_inotify): Remove the two
	sources (N84597).

	Make the "Checking for updates" operation cleanly cancellable.

	* src/main.cc (rpcwu_cancel): New.
	(rpcwu_with_network): Call set_entertainment_cancel with it.
	(rcpwu_clos, rpcwu_clos): Renamed former to latter, changed all
	users.
	(maybe_refresh_package_cache_without_user): Partially reverted
	change from 2008-04-15: only check when the 'check_interval' has
	passed or red_pill_check_always is true, irrespective of red-pill
	mode.
	(create_toolbar): Put refresh button in toolbar when
	red_pill_check_always is false.

	* src/apt-worker.cc (download_lists, update_package_cache): Split
	downloading out of update_package_cache.  Fail immediately when
	the download has been cancelled by checking the return value of
	Fetcher.Run more carefully.  'Transactionize' index downloading by
	working in a temporary directory and only replacing the old lists
	with the new when the downloading has succeeded.

2008-04-22  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.cc set_entertainment_system_modal): New
	function to convert the entertainment dialog into a system modal
	dialog.
