@@ -1,5 +1,8 @@
 2008-04-22  Marius Vollmer  <marius.vollmer@nokia.com>
 
+	* src/update-notifier.c (update_notifier_finalize): Do not call
+	gtk_signal_handler_disconnect on priv->button.  See the comment.
+
 	* src/settings.cc (red_pill_check_always): Set to false as
 	default.
 
